[gd_scene load_steps=23 format=3 uid="uid://cebwc8kj70yhr"]

[ext_resource type="Theme" uid="uid://c7m84smbp6txn" path="res://assets/theme.tres" id="1_2meuk"]
[ext_resource type="Texture2D" uid="uid://tcxnyv8erlkk" path="res://assets/RuneScape_2_logo.png" id="1_wc2h2"]
[ext_resource type="PackedScene" uid="uid://dhd04ld6w05yi" path="res://skill_button.tscn" id="2_aj5ru"]
[ext_resource type="Script" path="res://idle_runescape.gd" id="2_sh1nw"]
[ext_resource type="FontFile" uid="uid://che2l5g32ul8e" path="res://assets/runescape_large.ttf" id="3_6eivg"]
[ext_resource type="Texture2D" uid="uid://devl34lfouh0n" path="res://assets/Woodcutting_icon_(detail).webp" id="3_ix48q"]
[ext_resource type="Texture2D" uid="uid://b5if3qckr7cnf" path="res://assets/Mining_icon_(detail).webp" id="4_4mksx"]
[ext_resource type="Texture2D" uid="uid://ci1iy44e5abwd" path="res://assets/Smithing_icon_(detail).webp" id="5_eawsa"]
[ext_resource type="Texture2D" uid="uid://bddwlumtpvco3" path="res://assets/Fishing_icon_(detail).webp" id="6_lsl8v"]
[ext_resource type="Texture2D" uid="uid://bm3a0uqyd7tfm" path="res://assets/Firemaking_icon_(detail).webp" id="7_ygfvb"]
[ext_resource type="Texture2D" uid="uid://bpuadwca7xydl" path="res://assets/connor_cropped.webp" id="9_5ui7i"]
[ext_resource type="Texture2D" uid="uid://d0e3dy1jkx325" path="res://assets/130px-Beer_detail.webp" id="11_7hrcp"]
[ext_resource type="Texture2D" uid="uid://ej3pivo5nxxj" path="res://assets/1280px-Bronze_platebody_detail.png" id="13_5whrt"]
[ext_resource type="Texture2D" uid="uid://gvnoae8lop6j" path="res://assets/Coins 2.png" id="13_qv3tw"]
[ext_resource type="Texture2D" uid="uid://cc7pj7l3hrfyc" path="res://assets/Rat.png" id="14_1gf7g"]
[ext_resource type="Texture2D" uid="uid://d22uyj0iex4l8" path="res://assets/Hitpoints_icon.webp" id="14_8hwe2"]
[ext_resource type="Texture2D" uid="uid://c83hp3gum7dhn" path="res://assets/Copper ore.png" id="15_f3v7u"]
[ext_resource type="Texture2D" uid="uid://csyrotmxgpsuj" path="res://assets/Bronze bar.png" id="16_qxehu"]
[ext_resource type="Texture2D" uid="uid://bxf7omdwnqxvh" path="res://assets/Logs.png" id="17_b7bhd"]
[ext_resource type="Texture2D" uid="uid://crsrscy3y83jt" path="res://assets/Raw shrimps.png" id="18_vkyi3"]
[ext_resource type="AudioStream" uid="uid://bypvfbdwrh241" path="res://assets/music/Scape_Santa.ogg" id="21_sdine"]

[sub_resource type="LabelSettings" id="LabelSettings_yy5kp"]
font = ExtResource("3_6eivg")
font_size = 90
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 5)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2meuk")
script = ExtResource("2_sh1nw")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 10.0
offset_right = 553.0
offset_bottom = 159.0
texture = ExtResource("1_wc2h2")

[node name="Title2" type="Label" parent="."]
layout_mode = 0
offset_left = 579.0
offset_top = 44.0
offset_right = 877.0
offset_bottom = 124.0
text = "At Home"
label_settings = SubResource("LabelSettings_yy5kp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackButton" parent="." instance=ExtResource("2_aj5ru")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_top = 170.0
offset_right = 245.0
offset_bottom = 350.0

[node name="MiningButton" parent="." instance=ExtResource("2_aj5ru")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 300.0
offset_top = 170.0
offset_right = 495.0
offset_bottom = 350.0
text = "Mining"
icon = ExtResource("4_4mksx")

[node name="SmithingButton" parent="." instance=ExtResource("2_aj5ru")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 550.0
offset_top = 170.0
offset_right = 745.0
offset_bottom = 350.0
text = "Smithing"
icon = ExtResource("5_eawsa")

[node name="WoodcuttingButton" parent="." instance=ExtResource("2_aj5ru")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_top = 410.0
offset_right = 245.0
offset_bottom = 590.0
text = "Woodcutting"
icon = ExtResource("3_ix48q")

[node name="FiremakingButton" parent="." instance=ExtResource("2_aj5ru")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 300.0
offset_top = 410.0
offset_right = 495.0
offset_bottom = 590.0
text = "Firemaking
"
icon = ExtResource("7_ygfvb")

[node name="FishingButton" parent="." instance=ExtResource("2_aj5ru")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 550.0
offset_top = 410.0
offset_right = 745.0
offset_bottom = 590.0
text = "Fishing"
icon = ExtResource("6_lsl8v")

[node name="BeerButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 300.0
offset_top = 650.0
offset_right = 495.0
offset_bottom = 702.0
text = "Buy Beer "
icon = ExtResource("11_7hrcp")
expand_icon = true

[node name="BeerPriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 650.0
offset_right = 543.0
offset_bottom = 702.0
text = "2gp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Face" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -459.0
offset_top = 175.0
offset_right = -281.0
offset_bottom = 353.0
grow_horizontal = 0
texture = ExtResource("9_5ui7i")

[node name="StatsContainerOuter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.998
anchor_right = 0.998
offset_left = -268.44
offset_top = 397.0
offset_right = -1.44006
offset_bottom = 693.0

[node name="StatsLabel" type="Label" parent="StatsContainerOuter"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="StatsContainerOuter"]
layout_mode = 2
columns = 4

[node name="HpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "HP"

[node name="HpValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "99/99"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="HpXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "13034431xp"
clip_text = true

[node name="AttackLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "Attack"

[node name="AttackValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01"
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="AttackXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0xp"
clip_text = true

[node name="MiningLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "Mining"

[node name="MiningValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01"
horizontal_alignment = 2

[node name="Spacer3" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="MiningXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0xp"
clip_text = true

[node name="SmithingLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "Smithing"

[node name="SmithingValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01"
horizontal_alignment = 2

[node name="Spacer4" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="SmithingXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0xp"
clip_text = true

[node name="WoodcuttingLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "WC"

[node name="WoodcuttingValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01"
horizontal_alignment = 2

[node name="Spacer5" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="WoodcuttingXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0xp"
clip_text = true

[node name="FiremakingLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "FM"

[node name="FiremakingValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01"
horizontal_alignment = 2

[node name="Spacer6" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="FiremakingXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0xp"
clip_text = true

[node name="FishingLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2
text = "Fishing"

[node name="FishingValLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01"
horizontal_alignment = 2

[node name="Spacer7" type="Control" parent="StatsContainerOuter/StatsContainer"]
layout_mode = 2

[node name="FishingXpLabel" type="Label" parent="StatsContainerOuter/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "0xp"
clip_text = true

[node name="InventoryContainerOuter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -501.0
offset_top = 397.0
offset_right = -297.0
offset_bottom = 657.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContainerOuter"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="InventoryContainerOuter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 65
text = "Items"
horizontal_alignment = 1

[node name="X10Button" type="Button" parent="InventoryContainerOuter/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "10x"

[node name="InventoryContainer" type="GridContainer" parent="InventoryContainerOuter"]
layout_mode = 2
columns = 3

[node name="CoinsLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2
text = "Coins"

[node name="CoinsValLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "99.99k"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2

[node name="OresLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2
text = "Ores"

[node name="OresValLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SellOresButton" type="Button" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 0
icon = ExtResource("13_qv3tw")

[node name="BarsLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2
text = "Bars"

[node name="BarsValLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SellBarsButton" type="Button" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 0
icon = ExtResource("13_qv3tw")

[node name="LogsLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2
text = "Logs"

[node name="LogsValLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="SellLogsButton" type="Button" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 0
icon = ExtResource("13_qv3tw")

[node name="FoodLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2
text = "Food"

[node name="FoodValLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="EatButton" type="Button" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("14_8hwe2")

[node name="BeerGlassesLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2
text = "B.Glasses"

[node name="BeerGlassesValLabel" type="Label" parent="InventoryContainerOuter/InventoryContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="Spacer6" type="Control" parent="InventoryContainerOuter/InventoryContainer"]
layout_mode = 2

[node name="EquipContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -219.0
offset_top = 159.0
offset_right = -69.0
offset_bottom = 361.0
grow_horizontal = 0

[node name="Label" type="Label" parent="EquipContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Equipment"

[node name="EquipIcon" type="TextureRect" parent="EquipContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("13_5whrt")
expand_mode = 1

[node name="MonsterIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_top = 358.0
offset_right = 245.0
offset_bottom = 398.0
texture = ExtResource("14_1gf7g")
expand_mode = 3
stretch_mode = 4

[node name="OreIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 300.0
offset_top = 358.0
offset_right = 495.0
offset_bottom = 398.0
texture = ExtResource("15_f3v7u")
expand_mode = 3
stretch_mode = 4

[node name="BarIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 550.0
offset_top = 358.0
offset_right = 745.0
offset_bottom = 398.0
texture = ExtResource("16_qxehu")
expand_mode = 3
stretch_mode = 4

[node name="WoodIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_top = 598.0
offset_right = 245.0
offset_bottom = 638.0
texture = ExtResource("17_b7bhd")
expand_mode = 3
stretch_mode = 4

[node name="BurnIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 300.0
offset_top = 599.0
offset_right = 495.0
offset_bottom = 639.0
texture = ExtResource("17_b7bhd")
expand_mode = 3
stretch_mode = 4

[node name="FishIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 550.0
offset_top = 598.0
offset_right = 745.0
offset_bottom = 638.0
texture = ExtResource("18_vkyi3")
expand_mode = 3
stretch_mode = 4

[node name="HealTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_sdine")
autoplay = true

[connection signal="toggled" from="InventoryContainerOuter/HBoxContainer/X10Button" to="." method="_on_x10_button_toggled"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
